--- a/src/StudentManagement/RegistrationForm.form
+++ b/src/StudentManagement/RegistrationForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="registerPanel" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="533"/>
+      <xy x="23" y="14" width="555" height="564"/>
     </constraints>
     <properties>
       <background color="-10980100"/>
@@ -115,16 +115,6 @@
           <text value="Password:"/>
         </properties>
       </component>
-      <component id="b98ed" class="javax.swing.JTextField" binding="txtPW">
-        <constraints>
-          <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Menlo" size="18" style="1"/>
-        </properties>
-      </component>
       <component id="761a8" class="javax.swing.JLabel">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -134,19 +124,11 @@
           <text value="Confirm password:"/>
         </properties>
       </component>
-      <component id="2cba8" class="javax.swing.JTextField" binding="txtConfirmPw">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Menlo" size="18" style="1"/>
-        </properties>
-      </component>
       <component id="49433" class="javax.swing.JButton" binding="registerBtn">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="93" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Register"/>
@@ -159,6 +141,22 @@
         <properties>
           <text value="Cancel"/>
         </properties>
+      </component>
+      <component id="8e775" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="4c3cf" class="javax.swing.JPasswordField" binding="passwordField2" default-binding="true">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
